# RegenAIcalculator

./: README.md
ecobased_crew/: .gitignore  README.md  pyproject.toml
ecobased_crew/src/ecobased_crew/: crew.py  main.py
