[project]
name = "ecobased_crew"
version = "0.1.0"
description = "ecobased-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
ecobased_crew = "ecobased_crew.main:run"
run_crew = "ecobased_crew.main:run"
train = "ecobased_crew.main:train"
replay = "ecobased_crew.main:replay"
test = "ecobased_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
